# LearningCPP

./: CMakeLists.txt  main.cpp
Basics/: MCD.cpp  Rhombus_P72484.cpp  Triangle_P29973.cpp  condicionals.cpp  condicionalsV2.cpp  domino.cpp  for.cpp  helloWorld.cpp  littleProblem.cpp  secondsToHMS.cpp  sequence.cpp  while.cpp
Basics/Declarations/: condicionals.h  condicionalsV2.h  helloWorld.h  littleProblem.h  secondsToHMS.h  while.h
Basics/Exercises/: condicionals.cpp  condicionalsV2.cpp  helloWorld.cpp  littleProblem.cpp  secondsToHMS.cpp  while.cpp
DataTypes/: CharClassification_P42042.cpp  HexReversed_P60816.cpp  averageReals.cpp  booleans.cpp  castlesAndCatapults.cpp  chars.cpp  reals.cpp  texts.cpp  wordLength.cpp
Declarations/: basicsHeader.h  dataTypesHeader.h
